Bug 417988 - Columns displayed do not match configuration
Summary: Columns displayed do not match configuration
Status: RESOLVED FIXED
Alias: None
Product: ktimetracker
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Potashev
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-21 12:11 UTC by Andreas Kilgus
Modified: 2020-03-07 19:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot config/main (37.54 KB, image/png)
2020-02-21 12:11 UTC, Andreas Kilgus
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Kilgus 2020-02-21 12:11:02 UTC
Created attachment 126258 [details]
Screenshot config/main

SUMMARY

ktimetracker shows all columns in main window, not the ones saved in configuration to display.

STEPS TO REPRODUCE
1. Disable some columns of main window (in configuration dialogue or main window).
2. Quit ktimetracker.
3. Start ktimetracker.

OBSERVED RESULT

Ktimetracker shows all columns available.

EXPECTED RESULT

Ktimetracker shows just the columns configured to display.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma:
(available in About System)
KDE Plasma Version: 5.18.1
KDE Frameworks Version: 5.67.0
Qt Version: 5.14.1
Comment 1 Alexander Potashev 2020-02-24 22:06:08 UTC
This is easy to fix, I'm going to push the change in a couple of weeks. Sorry for the delay.
Comment 2 Andreas Kilgus 2020-02-24 22:33:51 UTC
(In reply to Alexander Potashev from comment #1)
> This is easy to fix, I'm going to push the change in a couple of weeks.

Pleased to read that. :)

> Sorry for the delay.

Never mind. it's not a show-stopper, therefore there's no need to hurry. Looking at other bug reports in the KDE universe that hit me I'm glad the reported behaviour is not by design … ;)
Comment 3 Alexander Potashev 2020-03-07 19:43:25 UTC
Git commit ddc87a47089b900ee1c62be10b23d0d4bb2361f1 by Alexander Potashev.
Committed on 24/02/2020 at 22:01.
Pushed by aspotashev into branch 'master'.

TaskView: Change visibility of table columns after the view is connected to model

Otherwise setColumnHidden() has no effect.

M  +1    -1    src/taskview.cpp

https://commits.kde.org/ktimetracker/ddc87a47089b900ee1c62be10b23d0d4bb2361f1