TaskView: Change visibility of table columns after the view is connected to model

Otherwise setColumnHidden() has no effect.

BUG: 417988